# site-guard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  distributed-monitoring-arch-design.md  pyproject.toml
.github/workflows/: ci.yml
src/site_guard/: main.py
src/site_guard/application/: monitoring_app.py
src/site_guard/domain/models/: config.py  content.py  result.py  status.py
src/site_guard/domain/repositories/: config.py
src/site_guard/domain/services/: checker.py  logger.py  monitoring.py
src/site_guard/infrastructure/http/: checker.py
src/site_guard/infrastructure/logging/: logger.py  setup.py
src/site_guard/infrastructure/persistence/: config.py
src/site_guard/infrastucture/logging/: logger.py
tests/: conftest.py
tests/integration/: test_monitoring.py
tests/unit/domain/: test_check_status.py  test_content.py  test_monitoring_config.py  test_monitoring_service.py  test_retry_config.py  test_site_check_result.py  test_site_config.py
tests/unit/infrastructure/: test_file_config_loader.py
